# GenerativeArt

./: .gitignore  CMakeLists.txt  README.md  compile.sh  regenerate_all.sh
CLI11/: CLI11.hpp  CLI11Domain.h
includes/: ColorMap.h  FunctionPool.h  GenerativeArt.h  RandomFunction.h  color_map.h  function_pool.h  image_generator.h  random_function.h
sources/: FunctionPool.cpp  generate_high_resolution_image.cpp  generate_samples.cpp  main.cpp
